@@ -13,11 +13,13 @@ DIST gitlab-ce-8.8.1.tar.gz 17813843 SHA256 842519d8bcff1e7e056c83fdfded8dc042e3
 DIST gitlab-ce-8.8.2.tar.gz 18475752 SHA256 a726fe8439a85f3a22fd3df31b2ab6d8ff9ab4301090a399c439ec27dbd6d3e0 SHA512 57d1b0874657b225b34ff7421cd2a1f3b5bcd0261bd9f44a761302fb81622f47296c896d726abb94530337b2a529bd7a1504896e5240252015d4eaa4c0993cc3 WHIRLPOOL 0ed528deecb909c4bae253be7b5066ff14c864efb9f0f6ae8d8a3649d3f2f84887caa57b385d7ae58e1fc6cb59e72d9da3847310e11e139134b06374361af1ea
 DIST gitlab-ce-8.8.3.tar.gz 18477429 SHA256 afacbb6ab40b8eb02825d3ec82125c3f23cbb28d816cda2f7b24e8b3e3cf1861 SHA512 d8907a1c3ac4e98e2332100b72b3a4a1c804590873ac8b115b0f76fd9b7d275db4ee0474be9343b053fcc602512f0e0537f90f10533375da1c829a648d172904 WHIRLPOOL f8c9e326714da3fd791ecf452c88ff91ef95bc1d8cdf104fc8facbd855cf9345f51b86f612225915c04da474f3879fa80797a718c187c975309c5f22cc140b7d
 DIST gitlab-ce-8.8.4.tar.gz 18477082 SHA256 298cce24c3c9db43e810d892ddfb09499d87e99caec01bc9c741f09392ebb106 SHA512 05ed4213c8c9a653498b8687070e6cff017f7cf2b19b461036f15a102d770a3fb19f571c271fe18071c7be3969ad179d72023a1b0cc5e5585ea81aea32605608 WHIRLPOOL 024f2b1ff347ab629f304fedd00e61068c2b8de99569dcf5870b3535a89a8a7cb166874995e53e76ae6ff3d5d9602d61c849bf6520e24fb7e308d08dcf05c1d0
+DIST gitlab-ce-8.8.5.tar.gz 18478664 SHA256 385fefd73ea70797ee2b1d9084c0b5a0f90917a7636926537746bd86143e0335 SHA512 9fef95ecabc16fd441b81ca107567d7ff5abfde39bbfe23b777b0ca1e11cb0bb3028cb597a04c31b478e06fb2f91bd635fc4484ee01d44b4856e528d5eea328c WHIRLPOOL 8a010f2dfc635c87dc3434daae60c0f5965cccb98fd37672ccb772c5baaf2cfe1e232fa1dd21e612d6d08f409714e79e879c46ea28a0e2fe24198308f280b34a
 EBUILD gitlab-ce-8.7.5.ebuild 12328 SHA256 19aa6d76fa724ed44c5518edcb2fe48c351047b2a57ed632d3b9427c96776232 SHA512 1f3a250061e46b3d4eec7ecb089b0d57c5cabc093d992aef26b05d29be39432868d2d3e64abe10294dd68dc8fc5de8d4a464332e66d1dafe9af88e2d305909e9 WHIRLPOOL 6f9887e1914297e41daa34c8792a5c2cdf8dea6092dedf5aa151f023190473db45782dba30f17c7c03d62a496a20aa3d576a7029b970122806a9b7e0913308d8
 EBUILD gitlab-ce-8.8.1.ebuild 12335 SHA256 3b0889b1560663ec37f63a67c0191baef646d1858769ac4bba20f2ecbb0a43c6 SHA512 3867329ef7b310b412935cb27d6650ba4d1f32d373196d21e8255510283304dcd7fe9cfcafc1ca6f17ee195c4eeb9440f848a00ded50148374c47d4805e41aff WHIRLPOOL 4ce78d0e2b653848159f231bf89802cd1e9d83269994362b5dfb1ce2b27d12eafdd0d8961294d0f943231eb38a5e78a3c7b66547d2d875e410bd23aafb8968b6
 EBUILD gitlab-ce-8.8.2.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
 EBUILD gitlab-ce-8.8.3.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
 EBUILD gitlab-ce-8.8.4.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
-EBUILD gitlab-ce-9999.ebuild 12347 SHA256 709ccae7ec6c98868c8a054da2cfc0f68745bdd6e3cb600b5a2e473a0dc95703 SHA512 51191da52049563da5569132e652688bec7c4cc2c4d9267f751b6b13f3028762632d991b80d22f481532308a088d0f287060da04736cdbec5f6990d1fd9b7d53 WHIRLPOOL 6c3aefe4c3d35d7c0d984a51608e72d106f06d5fd93a5e22a56cb8345c212660b3d8d6758b3a6d2941961f0a4880b755b6558447a34f8615b44c1145246826bf
-MISC ChangeLog 234 SHA256 75ded9a3f381ac0208343e1b976a739f72135123dbf5f55652bbf9dae681c443 SHA512 66dd5807e3e9ec7f7ede6bcb8c7dcdd4f2dab67d487484b2ec35dfbd93fb310eb9292db4ec9ad6150a21601731b68647773478fdf4276186f3d4f78c01c6590e WHIRLPOOL 055a652fda51f927e1d7f0b5c107ea1bea2e15f215a51bd3523bb40c4737df1626de220047262c957b278f42cff95b5f70340be85b5c31401e33ae30b6b3d630
+EBUILD gitlab-ce-8.8.5.ebuild 12342 SHA256 0b528722bb3bc7d232dc6a272973bf8da77992fefa308dabf4b7a9fba8548c18 SHA512 430ee8b469bf43bd8889e9375c49ca83a35d2956c6964e0f1dd07921fbb124a8d7decf60950fbbbc836025d74e73da1e7c89119da2348090d163eb6062739fb4 WHIRLPOOL 3730bf6b32dbc0c3605b15a953114aca56faf859f83672f05ad0b92251697a9cc0778b13d3ba3fd25ddb0858e8ce43b400573f68a605e063ad9bed8597c29fc5
+EBUILD gitlab-ce-9999.ebuild 12347 SHA256 ce1daacacd7755d663c858352ed7955fd8c7c76cab310b002c273bb078cd5fe8 SHA512 c9e9666ab89fade17ccfaeb2cc77a87d243fcd7692770a265572fa38553d21c2f52cced641da32448375e4a3c7b2a62d98fccae896b33e61de04ba163c7c2605 WHIRLPOOL 37bd2c66d00b1e452258d510bccb9d7aa066bbe703aee514d9db8c4076005ff3d75185404cf34be9827d2baf577fe05c46b62109ee79e96cffc0a53906906e07
+MISC ChangeLog 479 SHA256 88062b0410e41cef71c204ce9d56c8181091335f37000f9b8a5c764882fbe30e SHA512 0bb04b65a9dcab698418a05a7c9ede79f3cc7ab35d789baaac900de79ca16f35ace6832608232473d7dfb60effefe8a7ec269a0d01ef6fc837e24850b4c2921d WHIRLPOOL b176a6e42d836998bf1180944ae0edd2bf77b3bdb894ffcc0596041be519f227ecc596052645a9ff2cacc8a6f95ee38ffbf1021a32e8ef9bea551d78812ec765
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
